added new sciense articles

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 url: "https://sultonov.github.io"
 baseurl: ""
 
-title: "Welcome to"
+title: "Yura's personal website"
 description: "Programmer from Uzbekistan"
 avatar: "/img/44565548_1926078517485074_8854205888227966976_o.jpg"
 
